--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -53,36 +53,31 @@
                         <td align="center">
                             <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 30px;font-weight: 700;margin: 0px;">Congratulations Team Cloud4C!</p>
                             <div style="font-family: 'Roboto', sans-serif;display: inline-block;text-align: left;padding: 0px 20px;">
-                                <p style="color: #000000;font-size: 14px;font-weight: 700;line-height: 22px;">We have a great news to share with you! </p>
+                                <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;">Dear all, </p>
                                 <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;">
-                                    We are glad to announce that Cloud4C has been recognized as 
-                                    <span style="color: #000000;font-size: 14px;font-weight: 700;line-height: 22px;">
-                                            One of the top three preferred Cloud Vendors in India
-                                    </span> and are ranked 1st in parameter – SLA, 
-                                    by Enterprise IT World in their CIO Perception Study 2018. 
+                                    We are excited to announce that Cloud4C has been ranked 1st in SLA and one of the top three preferred Cloud Vendors by Enterprise IT World in their CIO Perception Study 2018. 
                                 </p>
                                 <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 0px;">
-                                    The Enterprise IT World surveyed over 200 CIOs and IT leaders across leading companies in India. Cloud4C competed with industry 
-                                    leaders like AWS, Microsoft Azure, Google Cloud, IBM Cloud, and Alibaba Cloud on several parameters including Capability Index Rating, 
-                                    Scalability, SLA, Technical Support, Security and Reliability to emerge as one of the top 3 preferred vendors, overall.
+                                    Cloud4C has always distinguished itself by providing world class service and this is an endorsement and recognition of our sincere efforts. 
                                 </p>
-                                <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 20px;"><span style="color: #000000;font-size: 14px;font-weight: 700;line-height: 22px;">
-                                    We would like to thank each one of you for helping us achieve this milestone! 
-                                    </span><br>
-                                    Without the sincere efforts, dedication and support this would not have been possible.
+                                <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 20px;">The Enterprise IT World surveyed over 200 CIOs and IT leaders across leading companies in India. Cloud4C competed with industry leaders like AWS, Microsoft Azure, Google Cloud, IBM Cloud, and Alibaba Cloud on several parameters including Capability Index Rating, Scalability, SLA, Technical Support, Security and Reliability to emerge as one of the top 3 preferred vendors, overall.
                                 </p>
+                               
                                 <div style="margin:10px 0px;">
                                     <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #f26522;padding: 18px 5%;font-size: 14px;font-weight: 700;margin: 20px 0px; width:90%; text-align: center;" target="_blank">Read The Full Report</a>
                                 </div>
                                 <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 20px;">
-                                    To know more about the milestones that we achieve together as a company and for all the latest updates, we request to stay connected on our Social Media pages.
+                                    Catering to the needs of our customers has been our No 1 priority and we believe we provide a compelling value proposition in a global marketplace. We are grateful to each one of our 2000+ global customers and over 60+ Fortune 500 clients for enlisting their trust in us.  We are proud to be the preferred partner to them as they accelerate and scale their business globally.
+
+                                </p>
+                               <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 20px;">Looking ahead, as we plan to expand our presence to over 40 countries, we intend to build upon our core value of providing our customers with solutions that drive real business value and results. 
                                 </p>
                                 <div>
                                   <a href="https://www.facebook.com/Cloud4C/?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/facebook.png" alt=""></a> &nbsp;&nbsp;<a href="https://twitter.com/Cloud4Cservices?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/twitter.png" alt=""></a> &nbsp;&nbsp; <a href="https://www.linkedin.com/company/cloud4c/?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/linkedin.png" alt=""></a>
                               </div>
                                 <p style="color: #000000;font-size: 14px;font-weight: 700;line-height: 22px;margin-bottom: 20px;">
-                                    With Your Success In Mind,<br>
-                                    Marketing Team - Cloud4C
+                                    Thankyou,<br>
+                                    Marketing Team <br> Cloud4C
                                 </p>
                             </div>
                         </td>
