--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -8,85 +8,103 @@
 </head>
 <body style="margin: 0px;background: #ffffff;">
     <div style="margin:0;padding:0;">
-        <style>
-        /* oswald-700 - latin */
-        @font-face {
-        font-family: 'Oswald';
-        font-style: normal;
-        font-weight: 700;
-        src: url('https://gleecus.github.io/insights/fonts/Oswald/oswald-v16-latin-700.eot'); /* IE9 Compat Modes */
-        src: local('Oswald Bold'), local('Oswald-Bold'),
-        url('https://gleecus.github.io/insights/fonts/Oswald/oswald-v16-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-        url('https://gleecus.github.io/insights/fonts/Oswald/oswald-v16-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-        url('https://gleecus.github.io/insights/fonts/Oswald/oswald-v16-latin-700.woff') format('woff'), /* Modern Browsers */
-        url('https://gleecus.github.io/insights/fonts/Oswald/oswald-v16-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-        url('https://gleecus.github.io/insights/fonts/Oswald/oswald-v16-latin-700.svg#Oswald') format('svg'); /* Legacy iOS */
-        }
-        </style>
     <table align="center" cellpadding="0" cellspacing="0" style="max-width: 600px;height: auto;background-color: #ffffff;padding:20px 0px;">
-           
         <tr>
             <td>
-                <table style="padding:10px 0px;text-align: center;" cellpadding="0" cellspacing="0" width="100%" align="center">
+                <table style="padding:10px 0px;text-align: center;background: #22b24c;" cellpadding="0" cellspacing="0" width="100%" align="center">
                     <tr>
                         <td align="right">
-                            <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" target="_blank" style="margin-right:30px;"><img src="https://gleecus.github.io/insights/images/logo.png" alt="cloud4c logo" style="width: 135px;margin-top: 10px;"></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td align="center">
-                            <p style="font-family: 'Roboto', sans-serif;color: #000000;font-size: 30px;margin:20px 8px 0px;font-weight: 700;">We're There!</p>
+                            <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" target="_blank" style="margin-right:30px;"><img src="https://thego2guy.github.io/assets/cloud4c/email1/images/white_logo.png" alt="cloud4c logo" style="width: 135px;margin-top: 10px;"></a>
                         </td>
                     </tr>
                 </table>
-                <table align="center" cellspacing="0" cellpadding="0">
+                <table cellspacing="0" cellpadding="0" style="margin-top:20px;width: 100%;">
                     <tr>
-                        <td align="center">
+                        <td>
                             <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" target="_blank">
-                                <img src="https://gleecus.github.io/insights/images/banner_image.png" style="max-width: 100%;">
+                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/banner_logo.png" style="max-width: 100%;">
                             </a>
+                        </td>
+                        <td>
+                            <div style="margin-left:10%;">
+                                <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 16px;font-weight: 700;">We Are There</p>
+                                <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 26px;margin:0px;font-weight: 700;">We're There!</p>
+                                <p style="font-family: 'Roboto', sans-serif;color: #000000;font-size: 26px;margin:0px;font-weight: 700;">by Enterprise IT World</p>
+                            </div>
                         </td>
                     </tr>
                 </table>
                 <table cellspacing="0" cellpadding="10">
                     <tr>
                         <td align="center">
-                            <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 30px;font-weight: 700;margin: 0px;">Congratulations Team Cloud4C!</p>
-                            <div style="font-family: 'Roboto', sans-serif;display: inline-block;text-align: left;padding: 0px 20px;">
-                                <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;">Dear all, </p>
-                                <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;">
-                                    We are excited to announce that Cloud4C has been ranked 1st in SLA and one of the top three preferred Cloud Vendors by Enterprise IT World in their CIO Perception Study 2018. 
+                            <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;">
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">Dear All,</p>
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
+                                    We are excited to announce that Cloud4C has been ranked 1st in SLA and one of the top 
+                                    three preferred Cloud Vendors by Enterprise IT World in their CIO Perception Study 2018. 
                                 </p>
-                                <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 0px;">
-                                    Cloud4C has always distinguished itself by providing world class service and this is an endorsement and recognition of our sincere efforts. 
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
+                                    Cloud4C has always distinguished itself by providing world class service and this is an endorsement and recognition of our sincere efforts.
                                 </p>
-                                <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 20px;">The Enterprise IT World surveyed over 200 CIOs and IT leaders across leading companies in India. Cloud4C competed with industry leaders like AWS, Microsoft Azure, Google Cloud, IBM Cloud, and Alibaba Cloud on several parameters including Capability Index Rating, Scalability, SLA, Technical Support, Security and Reliability to emerge as one of the top 3 preferred vendors, overall.
-                                </p>
-                               
-                                <div style="margin:10px 0px;">
-                                    <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #f26522;padding: 18px 5%;font-size: 14px;font-weight: 700;margin: 20px 0px; width:90%; text-align: center;" target="_blank">Read The Full Report</a>
-                                </div>
-                                <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 20px;">
-                                    Catering to the needs of our customers has been our No 1 priority and we believe we provide a compelling value proposition in a global marketplace. We are grateful to each one of our 2000+ global customers and over 60+ Fortune 500 clients for enlisting their trust in us.  We are proud to be the preferred partner to them as they accelerate and scale their business globally.
-
-                                </p>
-                               <p style="color: #000000;font-size: 14px;font-weight: 300;line-height: 22px;margin-bottom: 20px;">Looking ahead, as we plan to expand our presence to over 40 countries, we intend to build upon our core value of providing our customers with solutions that drive real business value and results. 
-                                </p>
-                                <div>
-                                  <a href="https://www.facebook.com/Cloud4C/?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/facebook.png" alt=""></a> &nbsp;&nbsp;<a href="https://twitter.com/Cloud4Cservices?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/twitter.png" alt=""></a> &nbsp;&nbsp; <a href="https://www.linkedin.com/company/cloud4c/?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/linkedin.png" alt=""></a>
-                              </div>
-                                <p style="color: #000000;font-size: 14px;font-weight: 700;line-height: 22px;margin-bottom: 20px;">
-                                    Thankyou,<br>
-                                    Marketing Team <br> Cloud4C
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
+                                    The Enterprise IT World surveyed over 200 CIOs and IT leaders across leading companies in India. Cloud4C competed with industry leaders like AWS, Microsoft Azure, Google Cloud, IBM Cloud, and Alibaba Cloud on several parameters including Capability Index Rating, Scalability, SLA, Technical Support, Security and Reliability to emerge as one of the top 3 preferred vendors, overall.
                                 </p>
                             </div>
                         </td>
                     </tr>
-                </table>                
+                </table>
+                <table style="background-color:#f5f5f6;width: 100%;padding: 15px;">
+                    <tr>
+                        <td>
+                            <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #22b24c;font-size: 16px;font-weight: 700;">Some of the leading media publications that covered this news</p>
+                            <div>
+                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/business-standard.png" alt="" align="top" style="margin-right:6px;">
+                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/Business-Today-Logo.png" alt="" align="top" style="margin-right:6px;">
+                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/THE_WEEK_logo1.png" alt="" align="top" style="margin-right:6px;">
+                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/hansindia.png" alt="" align="top" style="margin-right:6px;">
+                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/india-today-logo.png" alt="" align="top" style="margin-right:6px;">
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                <table style="width:100%;">
+                    <tr>
+                        <td>
+                            <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;">
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
+                                        Catering to the needs of our customers has been our No 1 priority and we believe we provide a compelling value proposition 
+                                        in a global marketplace. We are grateful to each one of our 2000+ global customers and over 60+ Fortune 500 clients for 
+                                        enlisting their trust in us.  We are proud to be 
+                                        the preferred partner to them as they accelerate and scale their business globally.
+                                </p>
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
+                                        Looking ahead, as we plan to expand our presence to over 40 countries, we intend to build upon our core value of 
+                                        providing our customers with solutions that drive real business value and results. 
+                                </p>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                <table style="width:100%;">
+                    <tr>
+                        <td>
+                            <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;">
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;margin-bottom: 0px;">Thank You</p>
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;font-weight: 700;margin: 0px;">Marketing Team</p>
+                                <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;font-weight: 700;margin-top: 0px;">Cloud4C</p>
+                            </div>
+                        </td>
+                        <td align="right">
+                            <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;padding-right: 15px;">
+                                <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="color:#ffffff;font-size:14px;background-color:#22b24c;padding:20px 10px;text-decoration: none;">Read The Full Report</a>
+                            </div>
+                        </td>
+                    </tr>
+                </table>            
                 <table width="100%" cellspacing="0" cellpadding="0" align="center" style="background: #000000;">
                     <tr>
-                        <td align="center">
-                            <ul style="padding: 0px;margin: 4px 0px;font-family: 'Roboto', sans-serif;">
+                        <td align="left">
+                            <ul style="padding-left: 10px;margin: 4px 0px;font-family: 'Roboto', sans-serif;">
                                 <li style="display: inline-block;color:#ffffff;font-size: 10px; text-align: center;">Internal Communication &nbsp;&nbsp;
                                     <a href="mailto:marcom@cloud4c.com" style="color:#fff;text-decoration:none;">marcom@cloud4c.com</a></li>
                             </ul>
