--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -26,9 +26,9 @@
                             </a>
                         </td>
                         <td>
-                            <div style="margin-left:10%;">
+                            <div style="margin-left:10%;padding-right: 20px;">
                                 <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 16px;font-weight: 700;">We Are There</p>
-                                <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 26px;margin:0px;font-weight: 700;">We're There!</p>
+                                <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 26px;margin:0px;font-weight: 700;">Ranked Best in SLA</p>
                                 <p style="font-family: 'Roboto', sans-serif;color: #000000;font-size: 26px;margin:0px;font-weight: 700;">by Enterprise IT World</p>
                             </div>
                         </td>
@@ -87,6 +87,13 @@
                 </table>
                 <table style="width:100%;">
                     <tr>
+                        <td align="right">
+                            <div style="margin:10px 0px;">
+                                <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #f26522;padding: 18px 5%;font-size: 14px;font-weight: 700;margin: 20px 0px; width:90%; text-align: center;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;" target="_blank">Read The Full Report</a>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>
                             <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;">
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;margin-bottom: 0px;">Thank You</p>
@@ -94,20 +101,12 @@
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;font-weight: 700;margin-top: 0px;">Cloud4C</p>
                             </div>
                         </td>
-                        <td align="right">
-                            <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;padding-right: 15px;">
-                                <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="color:#ffffff;font-size:14px;background-color:#22b24c;padding:20px 10px;text-decoration: none;">Read The Full Report</a>
-                            </div>
-                        </td>
                     </tr>
                 </table>            
-                <table width="100%" cellspacing="0" cellpadding="0" align="center" style="background: #000000;">
+                <table width="100%" cellspacing="0" cellpadding="0" align="center" style="background: #000000;padding: 15px 0px;">
                     <tr>
                         <td align="left">
-                            <ul style="padding-left: 10px;margin: 4px 0px;font-family: 'Roboto', sans-serif;">
-                                <li style="display: inline-block;color:#ffffff;font-size: 10px; text-align: center;">Internal Communication &nbsp;&nbsp;
-                                    <a href="mailto:marcom@cloud4c.com" style="color:#fff;text-decoration:none;">marcom@cloud4c.com</a></li>
-                            </ul>
+                            <p style="color:#ffffff;font-size:12px;margin:0px;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding-left: 20px;">Copyright Cloud4C Services Private Ltd.</p>
                         </td>
                     </tr>
                 </table>
