--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -58,11 +58,7 @@
                         <td>
                             <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #22b24c;font-size: 16px;font-weight: 700;">Some of the leading media publications that covered this news</p>
                             <div>
-                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/business-standard.png" alt="" align="top" style="margin-right:6px;">
-                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/Business-Today-Logo.png" alt="" align="top" style="margin-right:6px;">
-                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/THE_WEEK_logo1.png" alt="" align="top" style="margin-right:6px;">
-                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/hansindia.png" alt="" align="top" style="margin-right:6px;">
-                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/india-today-logo.png" alt="" align="top" style="margin-right:6px;">
+                                <img src="https://thego2guy.github.io/assets/cloud4c/email1/images/news.png" alt="" align="middle" style="width:100%;">
                             </div>
                         </td>
                     </tr>
