--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -85,7 +85,7 @@
                     <tr>
                         <td align="right">
                             <div style="margin:10px 0px;">
-                                <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #f26522;padding: 18px 5%;font-size: 14px;font-weight: 700;margin: 20px 0px; width:90%; text-align: center;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;" target="_blank">Read The Full Report</a>
+                                <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #22b24c;padding: 18px 5%;font-size: 14px;font-weight: 700;margin: 20px 0px; width:90%; text-align: center;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;" target="_blank">Read The Full Report</a>
                             </div>
                         </td>
                     </tr>
