--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -14,7 +14,7 @@
                 <table style="padding:10px 0px;text-align: center;background: #22b24c;" cellpadding="0" cellspacing="0" width="100%" align="center">
                     <tr>
                         <td align="right">
-                            <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" target="_blank" style="margin-right:30px;"><img src="https://thego2guy.github.io/assets/cloud4c/email1/images/white_logo.png" alt="cloud4c logo" style="width: 135px;margin-top: 10px;"></a>
+                            <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" target="_blank" style="margin-right:30px;"><img src="https://thego2guy.github.io/assets/cloud4c/email1/images/white_logo.png" alt="cloud4c logo" style="width: 135px;margin-top: 10px;padding-right:10px;"></a>
                         </td>
                     </tr>
                 </table>
@@ -29,7 +29,7 @@
                             <div style="margin-left:10%;padding-right: 20px;">
                                 <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 16px;font-weight: 700;">We Are There</p>
                                 <p style="font-family: 'Roboto', sans-serif;color: #22b24c;font-size: 26px;margin:0px;font-weight: 700;">Ranked Best in SLA</p>
-                                <p style="font-family: 'Roboto', sans-serif;color: #000000;font-size: 26px;margin:0px;font-weight: 700;">by Enterprise IT World</p>
+                                <p style="font-family: 'Roboto', sans-serif;color: #000000;font-size: 26px;margin:0px;font-weight: 700;">By Enterprise IT World</p>
                             </div>
                         </td>
                     </tr>
@@ -85,12 +85,15 @@
                     <tr>
                         <td align="right">
                             <div style="margin:10px 0px;">
-                                <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #22b24c;padding: 18px 5%;font-size: 14px;font-weight: 700;margin: 20px 0px; width:90%; text-align: center;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;" target="_blank">Read The Full Report</a>
+                                <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #22b24c;padding: 18px 5%;font-size: 14px;font-weight: 700;margin: 20px 30px; width:80%; text-align: center;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;" target="_blank">Read The Full Report</a>
                             </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
+                          <div style="margin-left:20px;">
+                                  <a href="https://www.facebook.com/Cloud4C/?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/facebook.png" alt=""></a> &nbsp;&nbsp;<a href="https://twitter.com/Cloud4Cservices?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/twitter.png" alt=""></a> &nbsp;&nbsp; <a href="https://www.linkedin.com/company/cloud4c/?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/linkedin.png" alt=""></a>
+                              </div>
                             <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;">
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;margin-bottom: 0px;">Thank You</p>
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;font-weight: 700;margin: 0px;">Marketing Team</p>
