padding for footer and header

--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -8,13 +8,13 @@
 </head>
 <body style="margin: 0px;background: #ffffff;">
     <div style="margin:0;padding:0;">
-    <table align="center" cellpadding="0" cellspacing="0" style="max-width: 600px;height: auto;background-color: #ffffff;padding:20px 0px;">
+    <table align="center" cellpadding="0" cellspacing="0" style="max-width: 600px;height: auto;background-color: #ffffff;padding:20px 0px !important;">
         <tr>
             <td>
-                <table style="padding:10px 0px;text-align: center;background: #22b24c;" cellpadding="0" cellspacing="0" width="100%" align="center">
+                <table style="background: #22b24c;" cellpadding="10" cellspacing="10" width="100%" align="center">
                     <tr>
                         <td align="right">
-                            <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" target="_blank" style="margin-right:30px;"><img src="https://thego2guy.github.io/assets/cloud4c/email1/images/white_logo.png" alt="cloud4c logo" style="width: 135px;margin-top: 10px;padding-right:10px;"></a>
+                            <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" target="_blank"><img src="https://thego2guy.github.io/assets/cloud4c/email1/images/white_logo.png" alt="cloud4c logo" style="width: 135px;"></a>
                         </td>
                     </tr>
                 </table>
@@ -53,7 +53,7 @@
                         </td>
                     </tr>
                 </table>
-                <table style="background-color:#f5f5f6;width: 100%;padding: 15px;">
+                <table style="background-color:#f5f5f6;width: 100%;padding: 15px;" align="center">
                     <tr>
                         <td>
                             <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #22b24c;font-size: 16px;font-weight: 700;">Some of the leading media publications that covered this news</p>
@@ -70,8 +70,8 @@
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
                                         Catering to the needs of our customers has been our No 1 priority and we believe we provide a compelling value proposition 
                                         in a global marketplace. We are grateful to each one of our 2000+ global customers and over 60+ Fortune 500 clients for 
-                                        enlisting their trust in us.  We are proud to be 
                                         the preferred partner to them as they accelerate and scale their business globally.
+                                        enlisting their trust in us.  We are proud to be 
                                 </p>
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
                                         Looking ahead, as we plan to expand our presence to over 40 countries, we intend to build upon our core value of 
@@ -81,17 +81,15 @@
                         </td>
                     </tr>
                 </table>
-                <table style="width:100%;">
+                <table style="width:100%;" cellspacing="0" cellpadding="10">
                     <tr>
-                        <td align="right">
-                            <div style="margin:10px 0px;">
-                                <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #22b24c;padding: 18px 5%;font-size: 14px;font-weight: 700;margin: 20px 30px; width:80%; text-align: center;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;" target="_blank">Read The Full Report</a>
-                            </div>
+                        <td align="center" style="background-color:#22b24c;width: 100%;padding: 18px 5% !important;">
+                            <a href="https://www.cloud4c.com/CIO_Public_Cloud.php" style="text-decoration:none;color: #fff; display:block; border: none;background: #22b24c;font-size: 14px;font-weight: 700; width:80%; text-align: center;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;" target="_blank">Read The Full Report</a>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                          <div style="margin-left:20px;">
+                          <div style="margin-left:20px !important;">
                                   <a href="https://www.facebook.com/Cloud4C/?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/facebook.png" alt=""></a> &nbsp;&nbsp;<a href="https://twitter.com/Cloud4Cservices?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/twitter.png" alt=""></a> &nbsp;&nbsp; <a href="https://www.linkedin.com/company/cloud4c/?utm-source=ETIT" target="_blank"><img src="https://gleecus.github.io/insights/images/linkedin.png" alt=""></a>
                               </div>
                             <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;">
@@ -102,10 +100,10 @@
                         </td>
                     </tr>
                 </table>            
-                <table width="100%" cellspacing="0" cellpadding="0" align="center" style="background: #000000;padding: 15px 0px;">
+                <table width="100%" cellspacing="0" cellpadding="5" align="left" style="background: #000000;">
                     <tr>
-                        <td align="left">
-                            <p style="color:#ffffff;font-size:12px;margin:0px;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding-left: 20px;">Copyright Cloud4C Services Private Ltd.</p>
+                        <td>
+                            <div style="padding-left:20px !important;color:#ffffff;font-size:12px;margin:0px !important;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;">Copyright Cloud4C Services Private Ltd.</div>
                         </td>
                     </tr>
                 </table>
