suprit changes and unsubscribe

--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -40,7 +40,7 @@
                             <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;">
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">Dear All,</p>
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
-                                    We are excited to announce that Cloud4C has been ranked 1st in SLA and one of the top 
+                                    We are excited to announce that Cloud4C has been ranked 1st in SLA, and as one of the top 
                                     three preferred Cloud Vendors by Enterprise IT World in their CIO Perception Study 2018. 
                                 </p>
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
@@ -68,10 +68,7 @@
                         <td>
                             <div style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;display: inline-block;text-align: left;line-height: 24px;">
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
-                                        Catering to the needs of our customers has been our No 1 priority and we believe we provide a compelling value proposition 
-                                        in a global marketplace. We are grateful to each one of our 2000+ global customers and over 60+ Fortune 500 clients for 
-                                        the preferred partner to them as they accelerate and scale their business globally.
-                                        enlisting their trust in us.  We are proud to be 
+                                        Catering to the needs of our customers has been our No 1 priority and we believe we provide a compelling value proposition in a global marketplace. We are grateful to each one of our 2000+ global customers and over 60+ Fortune 500 clients for enlisting their trust in us.  We are proud to be the preferred partner to them as they accelerate and scale their business globally.
                                 </p>
                                 <p style="font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding: 0px 20px;color: #333333;font-size: 14px;">
                                         Looking ahead, as we plan to expand our presence to over 40 countries, we intend to build upon our core value of 
@@ -103,7 +100,8 @@
                 <table width="100%" cellspacing="0" cellpadding="5" align="left" style="background: #000000;">
                     <tr>
                         <td>
-                            <div style="padding-left:20px !important;color:#ffffff;font-size:12px;margin:0px !important;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;">Copyright Cloud4C Services Private Ltd.</div>
+                            <div style="padding-left:20px !important;color:#ffffff;font-size:12px;margin:0px !important;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; float: left;">Copyright Cloud4C Services Private Ltd.</div>
+                            <div><a href="[unsubscribe]" style="color:#fff;font-size:12px;text-decoration:none;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;float:right;">[unsubscribe]</a></div>
                         </td>
                     </tr>
                 </table>
