unsubscribe tag added

--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -101,7 +101,9 @@
                     <tr>
                         <td>
                             <div style="padding-left:20px !important;color:#ffffff;font-size:12px;margin:0px !important;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; float: left;">Copyright Cloud4C Services Private Ltd.</div>
-                            <div><a href="[unsubscribe]" style="color:#fff;font-size:12px;text-decoration:none;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;float:right;">[unsubscribe]</a></div>
+                        </td>
+                        <td>
+                            <a href="[unsubscribe]" style="color:#fff;font-size:12px;text-decoration:none;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;float:right;padding-right: 20px;">unsubscribe</a>
                         </td>
                     </tr>
                 </table>
