--- a/cloud4c/email1/index.html
+++ b/cloud4c/email1/index.html
@@ -101,12 +101,16 @@
                     <tr>
                         <td>
                             <div style="padding-left:20px !important;color:#ffffff;font-size:12px;margin:0px !important;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; float: left;">Copyright Cloud4C Services Private Ltd.</div>
-                        </td>
-                        <td>
-                            <a href="[unsubscribe]" style="color:#fff;font-size:12px;text-decoration:none;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;float:right;padding-right: 20px;">unsubscribe</a>
+                        </td>                        
+                    </tr>
+                </table>     
+                <table width="100%" cellspacing="0" cellpadding="5" align="left" style="background: #fff;">
+                    <tr>                        
+                        <td style="color:#000;font-size:12px;text-decoration:none;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;text-align:center;">
+                            Don't want to receive emails? Unsubscribe <a href="[unsubscribe]" style="color:#000;font-size:12px;text-decoration:none;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;padding-right: 20px;text-decoration:underline;"> here</a>
                         </td>
                     </tr>
-                </table>
+                </table>             
             </td>
         </tr>
     </table> 
